--- a/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.css
+++ b/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.css
@@ -74,6 +74,33 @@
   color: #fff;
 }
 
+.boton-eliminar-imagen {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background-color: #c30000;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 28px;
+  height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 1rem;
+  cursor: pointer;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
+  z-index: 2;
+  transition: transform 0.2s ease, background-color 0.3s ease;
+}
+
+.boton-eliminar-imagen:hover {
+  transform: scale(1.1);
+  background-color: #a00000;
+}
+
+
 .btn-success:hover {
   background-color: #00a340;
   transform: translateY(-2px);
