--- a/src/app/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
+++ b/src/app/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
@@ -1,13 +1,29 @@
-<nav class="navbar navbar-expand-lg custom-navbar shadow-sm">
+<nav
+  class="navbar navbar-expand-lg custom-navbar shadow-sm"
+  [ngClass]="{ 'dev-navbar': isDev }"
+>
   <div class="container-fluid">
     <!-- Logo -->
     <a class="navbar-brand" href="/home">
-      <img src="assets/img/supermercados-family-cash.png" width="150" alt="Logo Family Cash" class="d-inline-block align-text-top bg-white p-1 rounded">
+      <img
+        [src]="logoUrl"
+        [ngClass]="{ 'logo-dev': isDev }"
+        width="150"
+        alt="Logo"
+        class="d-inline-block align-text-top bg-white p-1 rounded"
+      />
     </a>
 
     <!-- Botón hamburguesa -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -16,45 +32,86 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <!-- Siempre -->
         <li class="nav-item">
-          <a class="nav-link" [class.active]="strRuta == '/home' || strRuta == '/' || strRuta == ''" href="/home">
+          <a
+            class="nav-link"
+            [class.active]="
+              strRuta == '/home' || strRuta == '/' || strRuta == ''
+            "
+            href="/home"
+          >
             <i class="bi bi-house-door"></i> Inicio
           </a>
         </li>
 
         <!-- Solo Admin -->
         <li class="nav-item" *ngIf="isAdmin">
-          <a class="nav-link" [class.active]="strRuta == '/admin/producto/plist'" href="/admin/producto/plist">
+          <a
+            class="nav-link"
+            [class.active]="strRuta == '/admin/producto/plist'"
+            href="/admin/producto/plist"
+          >
             <i class="bi bi-collection"></i>Todos los Productos
+          </a>
+        </li>
+
+        <!-- Opción "Creación" solo para ADMIN -->
+        <li class="nav-item" *ngIf="isAdmin">
+          <a
+            class="nav-link text-success fw-bold"
+            [routerLink]="'/admin/producto/new'"
+          >
+            <i class="bi bi-plus-circle me-1"></i> Creación
           </a>
         </li>
 
         <!-- Admin o Proveedor -->
         <li class="nav-item" *ngIf="isAdmin || isProveedor">
-          <a class="nav-link" [class.active]="strRuta == '/admin/producto/xproveedor/plist'" [routerLink]="'/admin/producto/xproveedor/plist'">
+          <a
+            class="nav-link"
+            [class.active]="strRuta == '/admin/producto/xproveedor/plist'"
+            [routerLink]="'/admin/producto/xproveedor/plist'"
+          >
             <i class="bi bi-box-seam"></i> Productos
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link">
+            <i class="bi bi-gear"></i> Entorno
+            <select
+              id="entorno"
+              [value]="entorno"
+              (change)="onChangeEntorno($event)"
+            >
+              <option value="dev">Desarrollo</option>
+              <option value="prod">Producción</option>
+            </select>
           </a>
         </li>
       </ul>
 
       <!-- Sesión -->
       @if (!activeSession) {
-        <span class="navbar-text">
-          <a href="/login" class="btn btn-outline-light me-2">
-            <i class="bi bi-box-arrow-in-right"></i> Iniciar Sesión
-          </a>
-        </span>
+      <span class="navbar-text">
+        <a href="/login" class="btn btn-outline-light me-2">
+          <i class="bi bi-box-arrow-in-right"></i> Iniciar Sesión
+        </a>
+      </span>
       } @else {
-        <span class="navbar-text text-white me-3">
-          <i class="bi bi-person-circle"></i>
-          <a href="/bynif/{{ userNif }}" class="text-white text-decoration-underline">
-            {{ proveedorDescripcion }} ({{ userNif }})
-          </a>
-        </span>
-        <span class="navbar-text">
-          <a href="/logout" class="btn btn-outline-light">
-            <i class="bi bi-box-arrow-right"></i> Logout
-          </a>
-        </span>
+      <span class="navbar-text me-3" [ngClass]="{ 'text-white': !isDev, 'text-dev': isDev }">
+        <i class="bi bi-person-circle"></i>
+        <a
+          href="/bynif/{{ userNif }}"
+          [ngClass]="{ 'text-white': !isDev, 'text-dev': isDev, 'text-decoration-underline': true }"
+        >
+          {{ proveedorDescripcion }} ({{ userNif }})
+        </a>
+      </span>
+      <span class="navbar-text">
+        <a href="/logout" class="btn btn-outline-light">
+          <i class="bi bi-box-arrow-right"></i> Logout
+        </a>
+      </span>
       }
     </div>
   </div>
