--- a/src/app/component/producto/producto.admin.create.routed/producto.admin.create.routed.component.html
+++ b/src/app/component/producto/producto.admin.create.routed/producto.admin.create.routed.component.html
@@ -4,7 +4,7 @@
       <div class="card shadow border-0">
         <div class="card-header bg-primary text-white text-center">
           <h2 class="fw-bold">
-            <i class="bi bi-pencil-square"></i> Edición del Producto
+            <i class="bi bi-pencil-square"></i> Creación del Producto
           </h2>
         </div>
 
